--- a/RCSE.Data/RCSE.Data.csproj
+++ b/RCSE.Data/RCSE.Data.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Airport.cs" />
+    <Compile Include="Runway.cs" />
     <Compile Include="Navaid.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
