--- a/RCSE.Simulator/RCSE.Simulator.csproj
+++ b/RCSE.Simulator/RCSE.Simulator.csproj
@@ -55,6 +55,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RpuBinding.cs" />
+    <Compile Include="RwyBinding.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
