--- a/RCSE.Thales/RCSE.Thales.csproj
+++ b/RCSE.Thales/RCSE.Thales.csproj
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RCSE.Data\RCSE.Data.csproj">
+      <Project>{df6712f4-88e4-4238-b7d0-1234363083e0}</Project>
+      <Name>RCSE.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
